# advent-of-code-2022

./: advent-of-code2022.cabal
app/: Day7.hs  Day8.hs  Day8b.hs  Main.hs
day1/: solution.hs
day2/: solution.hs
day3/: solution.hs
day4/: solution.hs
day5/: solution.hs  test.txt
day6/: solution.hs
